Add AllInfoActivity, whish shows plan's title and description

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         <activity android:name=".activities.NewPlanActivity"
             android:theme="@style/AppTheme">
         </activity>
+
+        <activity android:name=".activities.AllInfoActivity"
+            android:theme="@style/AppTheme">
+        </activity>
     </application>
 
 </manifest>
